--- a/views/shop.pug
+++ b/views/shop.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title My Shop
+    title #{docTitle}
     link(rel="stylesheet", href="/css/main.css")
     link(rel="stylesheet", href="/css/product.css")
   body
@@ -15,3 +15,15 @@ html(lang="en")
             a.active(href="/") Shop
           li.main-header__item
             a.active(href="/admin/add-product") Add Product
+    main
+      .grid 
+      article.card.product-item
+        header.card-header
+          h1.product-title Great Book 
+      div.card__image 
+        img(src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png", alt="Book")
+      div.card_content 
+        h2.product__price $19.99
+        p.product__description A very interesting book
+      div.card__actions
+        button.btn Add to cart
