--- a/views/add-product.html
+++ b/views/add-product.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Product</title>
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/forms.css">
   <link rel="stylesheet" href="/css/product.css">
 </head>
 <body>
@@ -19,12 +20,12 @@
   </header>
   
   <main>
-    <form action="/admin/add-product" method="POST">
-      <div class="form-control">
-        <label for="title">Title</label>
-        <input type="text" name="title" id="title">
-      </div>
-      <button type="submit">Add product</button>
+    <form class="product-form" action="/admin/add-product" method="POST">
+        <div class="form-control">
+          <label for="title">Title</label>
+          <input type="text" name="title" id="title">
+        </div>
+        <button class="btn" type="submit">Add product</button>
     </form>
   </main>
   
